rns-lang/tests/snapshots/diagnostic/err-parser-outside_class_directive-dot_method.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----

.method public static main ([Ljava/lang/String;)V
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected directive before class definition
   ╭─[ test_data/diagnostic/err/parser/outside_class_directive/dot_method.ja:2:1 ]
   │
 2 │ .method public static main ([Ljava/lang/String;)V
   │ ───┬───  
   │    ╰───── '.method' is only allowed inside a class definition
   │ 
   │ Note: Define a class first using '.class [access_flags] <name>'.
───╯
