rns-lang/tests/snapshots/diagnostic/err-parser-outside_class_directive-eof.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
; only a comment, no class at all

----- STDOUT -----

----- STDERR -----
Error: file contains no class definition
   ╭─[ test_data/diagnostic/err/parser/outside_class_directive/eof.ja:1:35 ]
   │
 1 │ ; only a comment, no class at all
   │                                   │ 
   │                                   ╰─ the file is empty or contains only comments
   │ 
   │ Note: A Java assembly file must start with a '.class' directive.
───╯
